--- a/demo/TIP4_3/package.json
+++ b/demo/TIP4_3/package.json
@@ -4,12 +4,13 @@
   "description": "TIP4_1 demo",
   "scripts": {
     "compile": "locklift build --config locklift.config.js",
+    "local": "locklift run --config locklift.config.js --network local --script scripts/1-deploy-collection.js",
     "dev": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@itgold/everscale-tip": "^0.8.0",
+    "@itgold/everscale-tip": "^0.9.0",
     "locklift": "git+https://github.com/broxus/ton-locklift.git"
   }
 }
