--- a/demo/Lottery/package.json
+++ b/demo/Lottery/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "tip4_1",
-  "version": "1.0.0",
-  "description": "TIP4_1 demo",
+  "name": "lottery",
+  "version": "1.1.3",
+  "description": "Lottery demo",
   "scripts": {
-    "compile": "locklift build --config locklift.config.js",
-    "dev": "echo \"Error: no test specified\" && exit 1"
+    "build": "locklift build --config locklift.config.js",
+    "deploy": "locklift run --config locklift.config.js --network local --script scripts/1-deploy-collection.js"
   },
-  "author": "",
+  "author": "itgold.io",
   "license": "MIT",
   "dependencies": {
     "@itgold/everscale-tip": "^1.1.3",
