--- a/demo/Farming/package.json
+++ b/demo/Farming/package.json
@@ -1,10 +1,10 @@
 {
   "name": "farming",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "locklift run --config locklift.config.js --network local --script scripts/1-deploy-farming.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@itgold/everscale-tip": "^1.1.3",
     "broxus-ton-tokens-contracts": "git+https://github.com/broxus/ton-eth-bridge-token-contracts.git",
-    "locklift": "git+https://github.com/broxus/ton-locklift.git"
+    "locklift": "git+https://github.com/broxus/ton-locklift.git",
+    "prompts": "^2.4.2"
   }
 }
