--- a/demo/TIP4_3/package.json
+++ b/demo/TIP4_3/package.json
@@ -4,12 +4,14 @@
   "description": "TIP4_3 demo",
   "scripts": {
     "build": "locklift build --config locklift.config.js",
-    "deploy": "locklift run --config locklift.config.js --network devnet --script scripts/1-deploy-collection.js"
+    "deploy": "locklift run --config locklift.config.js --network local --script scripts/1-deploy-collection.js",
+    "mint": "locklift run --config locklift.config.js --network local --script scripts/2-mint-nft.js"
   },
   "author": "itgold.io",
   "license": "MIT",
   "dependencies": {
     "@itgold/everscale-tip": "^1.1.3",
-    "locklift": "git+https://github.com/broxus/ton-locklift.git"
+    "locklift": "git+https://github.com/broxus/ton-locklift.git",
+    "prompts": "^2.4.2"
   }
 }
