--- a/demo/NFTAuthDebot/package.json
+++ b/demo/NFTAuthDebot/package.json
@@ -4,12 +4,13 @@
   "description": "NFT Auth Debot",
   "scripts": {
     "build": "locklift build --config locklift.config.js",
-    "deploy": "locklift run --config locklift.config.js --network local --script scripts/1-deploy-debot.js"
+    "deploy": "locklift run --config locklift.config.js --network devnet --script scripts/1-deploy-debot.js"
   },
   "author": "itgold.io",
   "license": "MIT",
   "dependencies": {
     "@itgold/everscale-tip": "^1.1.3",
-    "locklift": "git+https://github.com/broxus/ton-locklift.git"
+    "locklift": "git+https://github.com/broxus/ton-locklift.git",
+    "prompts": "^2.4.2"
   }
 }
