--- a/demo/Finance/package.json
+++ b/demo/Finance/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "scripts": {
     "test": "npx locklift test --network local",
-    "deploy_sell_root": "npx locklift run --network local --script scripts/deploy_sell_root.ts --disable-build",
-    "deploy_wallet": "npx locklift run --network local --script scripts/deploy_wallet.ts --disable-build"
+    "deploy_sell_root": "npx locklift run --network local --script scripts/4_deploy_sell_root.ts --disable-build",
+    "deploy_tip3_root": "npx locklift run --network local --script scripts/3_deploy_tip3_root.ts --disable-build",
+    "deploy_collection": "npx locklift run --network local --script scripts/2_deploy_collection.ts --disable-build",
+    "mint": "npx locklift run --network local --script scripts/5_mint.ts --disable-build",
+    "sell": "npx locklift run --network local --script scripts/6_sell.ts --disable-build",
+    "buy": "npx locklift run --network local --script scripts/7_buy.ts --disable-build",
+    "pipeline": "npx locklift run --network local --script scripts/pipeline.ts --disable-build",
+    "deploy_wallet": "npx locklift run --network local --script scripts/1_deploy_wallet.ts --disable-build"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +27,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@broxus/contracts": "github:broxus/ever-contracts",
     "@itgold/everscale-tip": "^1.1.3",
     "broxus-ton-tokens-contracts": "github:broxus/tip3",
     "chalk": "^4.0.1",
