--- a/demo/TIP4_1/package.json
+++ b/demo/TIP4_1/package.json
@@ -1,17 +1,28 @@
 {
   "name": "tip4_1",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "TIP4_1 demo",
   "scripts": {
-    "build": "locklift build --config locklift.config.js",
-    "deploy": "locklift run --config locklift.config.js --network devnet --script scripts/1-deploy-collection.js",
-    "mint": "locklift run --config locklift.config.js --network devnet --script scripts/2-mint-nft.js"
+    "test": "npx locklift test --network local",
+    "1-deploy-collection": "npx locklift run --network local --script scripts/1-deploy-collection.ts",
+    "2-mint-nft": "npx locklift run --network local --script scripts/2-mint-nft.ts --disable-build"
   },
   "author": "itgold.io",
   "license": "MIT",
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.7.23",
+    "chai": "^4.3.6",
+    "everscale-standalone-client": "^2.1.1",
+    "locklift": "^2.2.3",
+    "prettier": "^2.7.1",
+    "ts-mocha": "^10.0.0",
+    "typescript": "^4.7.4"
+  },
   "dependencies": {
-    "@itgold/everscale-tip": "^1.1.3",
-    "locklift": "git+https://github.com/broxus/ton-locklift.git",
+    "@itgold/everscale-tip": "^1.1.4",
+    "ora": "^4.0.0",
     "prompts": "^2.4.2"
   }
 }
