--- a/demo/StandardWebToken/package.json
+++ b/demo/StandardWebToken/package.json
@@ -1,17 +1,179 @@
 {
   "name": "standard_web_token",
-  "version": "1.1.3",
-  "description": "Standard web token demo",
+  "version": "1.1.4",
   "scripts": {
-    "build": "locklift build --config locklift.config.js",
-    "deploy": "locklift run --config locklift.config.js --network local --script scripts/1-deploy-collection.js",
-    "mint": "locklift run --config locklift.config.js --network local --script scripts/2-mint-nft.js"
+    "test": "npx locklift test --network local",
+    "1-deploy-collection": "npx locklift run --network local --script scripts/1-deploy-collection.ts",
+    "2-mint-nft": "npx locklift run --network local --script scripts/2-mint-nft.ts --disable-build"
   },
-  "author": "itgold.io",
+  "author": "itgold,io",
   "license": "MIT",
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.8.0",
+    "chai": "^4.3.6",
+    "everscale-standalone-client": "^2.1.1",
+    "locklift": "^2.2.3",
+    "prettier": "^2.7.1",
+    "ts-mocha": "^10.0.0",
+    "typescript": "^4.7.4"
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "dependencies": {
-    "@itgold/everscale-tip": "^1.1.3",
-    "locklift": "git+https://github.com/broxus/ton-locklift.git",
-    "prompts": "^2.4.2"
-  }
+    "@itgold/everscale-tip": "^1.1.4",
+    "ansi-colors": "^4.1.1",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.2",
+    "argparse": "^2.0.1",
+    "array-back": "^3.1.0",
+    "arrify": "^1.0.1",
+    "assertion-error": "^1.1.0",
+    "async": "^3.2.4",
+    "asynckit": "^0.4.0",
+    "axios": "^0.27.2",
+    "balanced-match": "^1.0.2",
+    "bignumber.js": "^9.1.0",
+    "binary-extensions": "^2.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browser-stdout": "^1.3.1",
+    "buffer-from": "^1.1.2",
+    "camelcase": "^6.3.0",
+    "chalk": "^4.1.2",
+    "check-error": "^1.0.2",
+    "chokidar": "^3.5.3",
+    "cliui": "^7.0.4",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "command-line-args": "^5.2.1",
+    "command-line-usage": "^6.1.3",
+    "commander": "^7.2.0",
+    "concat-map": "^0.0.1",
+    "debug": "^4.3.4",
+    "decamelize": "^4.0.0",
+    "deep-eql": "^3.0.1",
+    "deep-extend": "^0.6.0",
+    "delayed-stream": "^1.0.0",
+    "diff": "^5.0.0",
+    "directory-tree": "^3.3.1",
+    "ejs": "^3.1.8",
+    "emoji-regex": "^8.0.0",
+    "env-paths": "^2.2.1",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^4.0.0",
+    "events": "^3.3.0",
+    "everscale-crypto": "^0.1.1",
+    "everscale-inpage-provider": "^0.3.42",
+    "fast-safe-stringify": "^2.1.1",
+    "filelist": "^1.0.4",
+    "fill-range": "^7.0.1",
+    "find-replace": "^3.0.0",
+    "find-up": "^5.0.0",
+    "flat": "^5.0.2",
+    "follow-redirects": "^1.15.2",
+    "form-data": "^4.0.0",
+    "fs-extra": "^10.1.0",
+    "fs.realpath": "^1.0.0",
+    "get-caller-file": "^2.0.5",
+    "get-func-name": "^2.0.0",
+    "get-stdin": "^5.0.1",
+    "glob": "^7.2.0",
+    "glob-parent": "^5.1.2",
+    "graceful-fs": "^4.2.10",
+    "has-flag": "^4.0.0",
+    "he": "^1.2.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-plain-obj": "^2.1.0",
+    "is-unicode-supported": "^0.1.0",
+    "jake": "^10.8.5",
+    "js-yaml": "^4.1.0",
+    "json5": "^2.2.1",
+    "jsonfile": "^6.1.0",
+    "locate-path": "^6.0.0",
+    "lodash": "^4.17.21",
+    "lodash.camelcase": "^4.3.0",
+    "log-symbols": "^4.1.0",
+    "loupe": "^2.3.4",
+    "lower-case": "^1.1.4",
+    "make-error": "^1.3.6",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.6",
+    "mkdirp": "^0.5.6",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.3",
+    "nekoton-wasm": "^1.0.8",
+    "no-case": "^2.3.2",
+    "node-fetch": "^2.6.7",
+    "node-gzip": "^1.1.2",
+    "normalize-path": "^3.0.0",
+    "once": "^1.4.0",
+    "ora": "^4.0.0",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "pathval": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "prompts": "^2.4.2",
+    "randombytes": "^2.1.0",
+    "readdirp": "^3.6.0",
+    "reduce-flatten": "^2.0.0",
+    "require-directory": "^2.1.1",
+    "rxjs": "^7.5.7",
+    "safe-buffer": "^5.2.1",
+    "sentence-case": "^2.1.1",
+    "serialize-javascript": "^6.0.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.21",
+    "split-text-to-chunks": "^1.0.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^3.0.0",
+    "strip-json-comments": "^3.1.1",
+    "superstruct": "^0.16.5",
+    "supports-color": "^7.2.0",
+    "table-layout": "^1.0.2",
+    "tablemark": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "tr46": "^0.0.3",
+    "ts-node": "^7.0.1",
+    "tsconfig-paths": "^4.1.0",
+    "tslib": "^2.4.0",
+    "type-detect": "^4.0.8",
+    "typescript-compare": "^0.0.2",
+    "typescript-logic": "^0.0.0",
+    "typescript-tuple": "^5.0.1",
+    "typical": "^4.0.0",
+    "underscore": "^1.13.6",
+    "universalify": "^2.0.0",
+    "upper-case": "^1.1.3",
+    "upper-case-first": "^1.1.2",
+    "webidl-conversions": "^3.0.1",
+    "whatwg-url": "^5.0.0",
+    "wordwrapjs": "^4.0.1",
+    "workerpool": "^6.2.1",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "y18n": "^5.0.8",
+    "yargs": "^16.2.0",
+    "yargs-parser": "^20.2.4",
+    "yargs-unparser": "^2.0.0",
+    "yn": "^2.0.0",
+    "yocto-queue": "^0.1.0"
+  },
+  "description": ""
 }
