--- a/demo/TIP4_1/package.json
+++ b/demo/TIP4_1/package.json
@@ -3,9 +3,9 @@
   "version": "1.1.4",
   "description": "TIP4_1 demo",
   "scripts": {
-    "test": "npx locklift test --network local",
-    "1-deploy-collection": "npx locklift run --network local --script scripts/1-deploy-collection.ts",
-    "2-mint-nft": "npx locklift run --network local --script scripts/2-mint-nft.ts --disable-build"
+    "test": "npx locklift test -n local",
+    "1-deploy-collection": "npx locklift run -n local -s scripts/1-deploy-collection.ts",
+    "2-mint-nft": "npx locklift run -n local -s scripts/2-mint-nft.ts --disable-build"
   },
   "author": "itgold.io",
   "license": "MIT",
@@ -15,13 +15,13 @@
     "@types/node": "^18.7.23",
     "chai": "^4.3.6",
     "everscale-standalone-client": "^2.1.1",
-    "locklift": "^2.2.3",
+    "locklift": "^2.5.5",
     "prettier": "^2.7.1",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@itgold/everscale-tip": "^1.1.4",
+    "@itgold/everscale-tip": "file:../../../everscale-tip",
     "ora": "^4.0.0",
     "prompts": "^2.4.2"
   }
